# beeref

./: .flake8  .gitignore  BeeRef.spec  CHANGELOG.rst  CNAME  CONTRIBUTING.rst  Gemfile  Pipfile  README.md  README.rst  _config.yml  beeref.desktop  beeref.py  build.py  index.md  macosx-run.md  org.beeref.BeeRef.appdata.xml  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_appimage.yml  flake8.yml  pytest.yml  update_website.yml
_layouts/: default.html  page.html
assets/css/: style.scss
beeref/: __main__.py  assets.py  bee_json.py  commands.py  config.py  constants.py  default_stylesheet.qss  gui.py  items.py  logging.py  main_controls.py  scene.py  selection.py  utils.py  view.py  widgets.py
beeref/actions/: __init__.py  actions.py  menu_structure.py  mixin.py
beeref/assets/: __init__.py  logo.icns
beeref/config/: __init__.py  controls.py  settings.py
beeref/documentation/: __init__.py  controls.html
beeref/fileio/: __init__.py  errors.py  export.py  image.py  schema.py  sql.py
beeref/gui/: __init__.py  settings.py
beeref/tests/: base.py  test_bee_json.py  test_items.py  test_scene.py
beeref/widgets/: __init__.py  color_gamut.py  settings.py  welcome_overlay.py
beeref/widgets/controls/: __init__.py  common.py  keyboard.py  mouse.py  mousewheel.py
requirements/: app.txt  build.txt  dev.txt  test.txt
tests/: base.py  conftest.py  test_assets.py  test_bee_json.py  test_commands.py  test_config.py  test_gui.py  test_items.py  test_logging.py  test_main.py  test_scene.py  test_selection.py  test_utils.py  test_view.py  test_widgets.py  utils.py
tests/actions/: test_actions.py  test_mixin.py
tests/assets/: test1item.bee
tests/config/: test_controls.py  test_settings.py
tests/fileio/: test_export.py  test_export_images_to_directory.py  test_export_scene_to_pixmap.py  test_export_scene_to_svg.py  test_image.py  test_init.py  test_sql.py
tests/items/: test_erroritem.py  test_items.py  test_pixmapitem.py  test_textitem.py
tests/selection/: test_base_item_mixin.py  test_multi_select_item.py  test_rubberband_item.py  test_selectable_mixin.py
tests/widgets/: test_color_gamut.py  test_settings.py  test_welcome_overlay.py  test_widgets.py
tests/widgets/controls/: keyboard.py  test_controls.py  test_keyboard.py  test_mouse.py  test_mousewheel.py
tools/: build_appimage.py  find_linux_libs.py  linux_libs.json  linux_libs_kde.json  linux_libs_nativefiledlg.json  linux_libs_notes.rst
